<resources>
    <string name="app_name">玩安卓</string>
    <string name="app_version">版本</string>
    <string name="author_name">lyl21</string>
    <string name="main_page">首页</string>
    <string name="main_project">项目</string>
    <string name="main_tree">体系</string>
    <string name="main_nav">导航</string>
    <string name="main_my">我的</string>
    <string name="search">搜索</string>
    <string name="drawer_left_open">打开侧边栏</string>
    <string name="drawer_left_close">关闭侧边栏</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="login_username">账户</string>
    <string name="pwd">密码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="tip">提示</string>


    <string name="img_404">哎呀图片走丢了</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="logout">退出登录</string>
    <string name="toLogin">请先登录</string>
    <!--首页-->
    <string name="article_title">标题</string>
    <string name="article_tag">标签</string>
    <string name="article_time_ago">x小时前</string>
    <string name="userCenter_collect">我的收藏</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!--查看大图start-->
    <string name="download">下载</string>
    <string name="selection_img">%1$s/%2$s</string>
    <string name="down_finish_save_to">下载完成,保存至：</string>
    <string name="down_image_failed">下载图片失败</string>
    <!--查看大图end-->
    <!-- 分享开始 -->
    <string name="share_wx">微信</string>
    <string name="share_wx_timeline">朋友圈</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_weibo">新浪微博</string>
    <!-- 分享结束 -->
    <!-- 剪切板开始 -->
    <string name="copy_yes">复制成功</string>
    <!-- 剪切板结束 -->
    <!-- 清除缓存开始 -->
    <string name="kb">KB</string>
    <string name="Mb">MB</string>
    <string name="k">KB缓存</string>
    <string name="m">MB缓存</string>
    <string name="clearing">正在清除缓存，请稍后···</string>
    <string name="no_clear">暂无缓存需要清理</string>
    <string name="clear_success">清除缓存成功</string>
    <string name="size_zero">0.00KB</string>
    <!-- 清除缓存结束 -->
    <!-- 验证码开始 -->
    <string name="get_code_latter">%1$ds后重新发送</string>
    <string name="get_verify_code_failed">获取验证码失败</string>
    <string name="send_verification_code_again">再次获取</string>
    <!-- 验证码结束 -->

    <string-array name="string_array_resolutions">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x360</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
    </string-array>

    <string name="load_state_loading">正在加载</string>


</resources>