<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_tip"
    android:background="@drawable/shape_bg_white_5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/tip"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_tip_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/text_black_hint"
        android:textSize="18sp" />

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_tip_cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/cancel" />

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_tip_sure"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/main_base_color" />
    </LinearLayout>
</LinearLayout>