<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="view"
            type="github.lyl21.wanandroid.moudle.login.LoginActivity" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/text_black_shallow"
    android:id="@+id/ll_login"
    android:padding="30dp">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="20dp"
                android:text="@string/login_username"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_username"
                android:textSize="14sp"
                android:textColor="@color/text_black"
                android:maxLines="1"
                android:maxEms="18"
                android:padding="10dp"
                android:text="popcomimico"
                 />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="20dp"
                android:text="@string/pwd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_pwd"
                android:textColor="@color/text_black"
                android:imeOptions="actionDone"
                android:textSize="14sp"
                android:maxEms="18"
                android:maxLines="1"
                android:padding="10dp"
                android:inputType="textPassword"
                android:text="popcomimico"

                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/tv_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_primary_oval"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>
</layout>
